--- a/robolectric/src/test/resources/AndroidManifest.xml
+++ b/robolectric/src/test/resources/AndroidManifest.xml
@@ -46,8 +46,8 @@
 
     <meta-data android:name="org.robolectric.metaName1" android:value="metaValue1" />
     <meta-data android:name="org.robolectric.metaName2" android:value="metaValue2" />
-    <meta-data android:name="org.robolectric.metaTrue" android:value="true" />
-    <meta-data android:name="org.robolectric.metaFalse" android:value="false" />
+    <meta-data android:name="org.robolectric.metaTrueLiteral" android:value="true" />
+    <meta-data android:name="org.robolectric.metaFalseLiteral" android:value="false" />
     <meta-data android:name="org.robolectric.metaInt" android:value="123" />
     <meta-data android:name="org.robolectric.metaFloat" android:value="1.23" />
     <meta-data android:name="org.robolectric.metaColor" android:value="#FFFFFF" />
@@ -184,19 +184,7 @@
       <intent-filter>
         <action android:name="org.robolectric.ACTION_DOT_SUBPACKAGE"/>
       </intent-filter>
-      <meta-data android:name="org.robolectric.metaName1" android:value="metaValue1" />
-      <meta-data android:name="org.robolectric.metaName2" android:value="metaValue2" />
-      <meta-data android:name="org.robolectric.metaTrue" android:value="true" />
-      <meta-data android:name="org.robolectric.metaFalse" android:value="false" />
-      <meta-data android:name="org.robolectric.metaInt" android:value="123" />
-      <meta-data android:name="org.robolectric.metaFloat" android:value="1.23" />
-      <meta-data android:name="org.robolectric.metaColor" android:value="#FFFFFF" />
-      <meta-data android:name="org.robolectric.metaBooleanFromRes" android:value="@bool/false_bool_value" />
-      <meta-data android:name="org.robolectric.metaIntFromRes" android:value="@integer/test_integer1" />
-      <meta-data android:name="org.robolectric.metaColorFromRes" android:value="@color/clear" />
-      <meta-data android:name="org.robolectric.metaStringFromRes" android:value="@string/app_name" />
-      <meta-data android:name="org.robolectric.metaStringOfIntFromRes" android:value="@string/str_int" />
-      <meta-data android:name="org.robolectric.metaStringRes" android:resource="@string/app_name" />
+      <meta-data android:name="numberOfSheep" android:value="42" />
     </receiver>
 
     <receiver android:name="com.foo.Receiver">
